# university_projects-

./: .gitignore  .gitmodules  LICENSE
GPT_DeepSeek_answer_evaluation/: README.md  data_utils.py  embedding_utils.py  main.py  model_traning.py  similarity_evaluation.py  test.py  train_all.py  visiual.py
genetic_algorithm/: README.md  main.py
genetic_algorithm/images/: cross.txt  diamond.txt  face.txt  heart.txt  sword.txt
incremental_odometry/: CMakeLists.txt  README.md  package.xml
incremental_odometry/scripts/: incremental_odometry_node.py
numeric_methots/: README.md  main.c
particle_filter/: CMakeLists.txt  README.md  odom.bag  package.xml
particle_filter/src/: particle_filter_node.cpp
skippity_game/: README.md  main.c
solve_maze/: CMakeLists.txt  README.md  package.xml
solve_maze/scripts/: my_mapper.py  my_solver.py
